bk_ida/gccida/c1/deps_may_trap_p
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/deps_may_trap_p/src/sched-deps.c:565:4: error: expected ';' after expression
rtx v3; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/deps_may_trap_p/src/sched-deps.c:565:5: error: use of undeclared identifier 'v3'
rtx v3; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/deps_may_trap_p/src/sched-deps.c:573:1: error: use of undeclared identifier 'v3'
v3 = reg_known_value[rtuint]; 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/deps_may_trap_p/src/sched-deps.c:574:6: error: use of undeclared identifier 'v3'
if ( v3 ) 
     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/deps_may_trap_p/src/sched-deps.c:575:7: error: use of undeclared identifier 'v3'
rtx = v3; 
      ^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/deps_may_trap_p/src/obj/sched-deps.o] Error 1
